# elba

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.bat  linux_build.sh  run-cmake.bat  run_cmake.ps1  win7_build.bat
cmake/: YTE_Source_Group.cmake
elba/: elba.sln  elba.vcxproj  elba.vcxproj.filters
examples/: ComponentTypes.cpp
libs/: assimp-vc140-mt.lib
src/Editor/: CMakeLists.txt  main.cpp
src/Editor/Framework/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  Menu.cpp  Menu.hpp  ToolBar.cpp  ToolBar.hpp  Widget.cpp  Widget.hpp  Workspace.cpp  Workspace.hpp
src/Editor/ImageEditor/: CMakeLists.txt  ImageEditor.cpp  ImageEditor.hpp
src/Editor/ImageEditor/ImageOperationsPanel/: CMakeLists.txt  ImageOperationsPanel.cpp  ImageOperationsPanel.hpp
src/Editor/ImageEditor/ImageWindow/: CMakeLists.txt  ImageWindow.cpp  ImageWindow.hpp
src/Editor/ImageEditor/Menus/: CMakeLists.txt  FileMenu.cpp  FileMenu.hpp  ImageOperationsMenu.cpp  ImageOperationsMenu.hpp
src/Editor/ImageEditor/OptionsPanel/: CMakeLists.txt  OptionsPanel.cpp  OptionsPanel.hpp
src/Editor/LevelEditor/: CMakeLists.txt  LevelEditor.cpp  LevelEditor.hpp
src/Editor/LevelEditor/LevelToolbar/: CMakeLists.txt  LevelToolbar.cpp  LevelToolbar.hpp
src/Editor/LevelEditor/LevelWindow/: LevelWindow.cpp  LevelWindow.hpp
src/Editor/LevelEditor/Menus/: CMakeLists.txt
src/Editor/LevelEditor/ObjectBrowser/: CMakeLists.txt  ObjectBrowser.cpp  ObjectBrowser.hpp  ObjectTree.cpp  ObjectTree.hpp
src/Editor/LevelEditor/PostProcessingOptions/: AddEffectContextMenu.cpp  AddEffectContextMenu.hpp  CMakeLists.txt  EffectItemWidget.cpp  EffectItemWidget.hpp  PostProcessingOptions.cpp  PostProcessingOptions.hpp
src/Elba/: CMakeLists.txt  Engine.cpp  Engine.hpp  main.cpp
src/Elba/Core/: CMakeLists.txt  Component.cpp  Component.hpp  CoreModule.cpp  CoreModule.hpp  Level.cpp  Level.hpp  Object.cpp  Object.hpp
src/Elba/Core/Components/: CMakeLists.txt  Model.cpp  Rotate.cpp  Rotate.hpp  Transform.cpp  Transform.hpp
src/Elba/Core/Components/CS370/: CMakeLists.txt  ImageOperationHandler.cpp  ImageOperationHandler.hpp  RealtimeHatching.cpp  RealtimeHatching.hpp  ResizeHandler.cpp  ResizeHandler.hpp  VideoTransitions.cpp
src/Elba/Core/Components/MAT362/: CMakeLists.txt  FuzzyController.cpp  FuzzyController.hpp  GammaController.cpp  GammaController.hpp
src/Elba/Framework/: CMakeLists.txt  FrameworkForwardDeclarations.hpp  Module.hpp  Resource.cpp  Resource.hpp  ResourceManager.hpp
src/Elba/GameLogic/: CMakeLists.txt  Rotate.cpp  Rotate.hpp
src/Elba/GameLogic/CS370/: CMakeLists.txt  ImageOperationHandler.cpp  RealtimeHatching.cpp  ResizeHandler.cpp  VideoTransitions.cpp  VideoTransitions.hpp
src/Elba/GameLogic/MAT362/: FuzzyController.cpp  GammaController.cpp  GammaController.hpp
src/Elba/Graphics/: CMakeLists.txt  Camera.cpp  Camera.hpp  GraphicsFactory.cpp  GraphicsFactory.hpp  GraphicsModule.cpp  GraphicsModule.hpp  Mesh.cpp  Mesh.hpp  PointLight.cpp  PointLight.hpp  Submesh.cpp  Submesh.hpp  Texture.cpp  Texture.hpp
src/Elba/Graphics/OpenGL/: CMakeLists.txt  Factory.cpp  Factory.hpp  Mesh.cpp  Mesh.hpp  OpenGLFactory.cpp  OpenGLFactory.hpp  OpenGLMesh.cpp  OpenGLMesh.hpp  OpenGLModule.cpp  OpenGLModule.hpp  OpenGLPostProcessBuffer.cpp  OpenGLPostProcessBuffer.hpp  OpenGLShader.cpp  OpenGLShader.hpp  OpenGLShaderProgram.cpp  OpenGLShaderProgram.hpp  OpenGLSubmesh.cpp  OpenGLSubmesh.hpp  OpenGLTexture.cpp  OpenGLTexture.hpp  Shader.cpp  Shader.hpp  Submesh.cpp  Submesh.hpp  Texture.cpp  Texture.hpp
src/Elba/Graphics/OpenGL/CS370/: CMakeLists.txt  CS370_Texture.hpp
src/Elba/Graphics/OpenGL/Pipeline/: CMakeLists.txt  OpenGLComputeShader.cpp  OpenGLComputeShader.hpp  OpenGLFragmentShader.cpp  OpenGLFragmentShader.hpp  OpenGLFramebuffer.cpp  OpenGLFramebuffer.hpp  OpenGLPostProcess.cpp  OpenGLPostProcess.hpp  OpenGLPostProcessBuffer.cpp  OpenGLPostProcessBuffer.hpp  OpenGLProgram.cpp  OpenGLProgram.hpp  OpenGLShader.cpp  OpenGLShader.hpp  OpenGLShaderProgram.cpp  OpenGLShaderProgram.hpp  OpenGLVertexShader.cpp  OpenGLVertexShader.hpp
src/Elba/Graphics/OpenGL/ShaderTypes/: CMakeLists.txt  OpenGLComputeShader.cpp  OpenGLComputeShader.hpp  OpenGLFragmentShader.cpp  OpenGLFragmentShader.hpp  OpenGLShader.cpp  OpenGLShader.hpp  OpenGLVertexShader.cpp  OpenGLVertexShader.hpp
src/Elba/Physics/: CMakeLists.txt  PhysicsFactory.hpp  PhysicsForwardDeclarations.hpp  PhysicsModule.cpp  PhysicsModule.hpp  PhysicsTransform.cpp  PhysicsTransform.hpp
src/Elba/Tests/: CMakeLists.txt  CoreTests.hpp  TestHelpers.hpp
src/Elba/Utilities/: CMakeLists.txt  GlobalKey.cpp  GlobalKey.hpp  StdTypedefs.hpp  Utils.cpp  Utils.hpp
src/Elba/Utilities/Math/: CMakeLists.txt
src/Elba/Utilities/Math/Fourier/: CMakeLists.txt  FourierTransform.cpp  FourierTransform.hpp
src/Elba/Utilities/Math/Fuzzy/: CMakeLists.txt  FuzzyController.cpp  FuzzyController.hpp  FuzzySet.cpp  FuzzySet.hpp  PiecewiseLinear.cpp  PiecewiseLinear.hpp  TakagiSugenoSystem.cpp  TakagiSugenoSystem.hpp
src/elba/: CMakeLists.txt  Engine.cpp  Engine.hpp  main.cpp
src/elba/Core/: CMakeLists.txt  Component.cpp  Component.hpp  CoreForwardDeclarations.hpp  CoreModule.cpp  CoreModule.hpp  CoreTypedefs.hpp  Object.cpp  Object.hpp
src/elba/Core/Components/: Model.cpp  Model.hpp  Transform.cpp  Transform.hpp
src/elba/Framework/: CMakeLists.txt  FrameworkForwardDeclarations.hpp  Module.cpp  Module.hpp  Resource.cpp  Resource.hpp  ResourceManager.cpp  ResourceManager.hpp
src/elba/Graphics/: CMakeLists.txt  GraphicsFactory.cpp  GraphicsFactory.hpp  GraphicsForwardDeclarations.hpp  GraphicsModule.cpp  GraphicsModule.hpp  Mesh.cpp  Mesh.hpp  Shader.cpp  Shader.hpp  Submesh.cpp  Submesh.hpp
src/elba/Physics/: CMakeLists.txt  PhysicsFactory.cpp  PhysicsFactory.hpp  PhysicsForwardDeclarations.hpp  PhysicsModule.cpp  PhysicsModule.hpp  PhysicsTransform.cpp  PhysicsTransform.hpp
src/elba/Tests/: CMakeLists.txt  CoreTests.cpp  CoreTests.hpp  PhysicsTests.cpp  PhysicsTests.hpp  TestHelpers.hpp
src/elba/Utilities/: CMakeLists.txt  GlobalKey.cpp
(+215 files in other folders)
